# ChangeLog for net-p2p/qbittorrent
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.195 2012/08/12 19:49:28 hwoarang Exp $

*qbittorrent-3.0.0 (12 Aug 2012)

  12 Aug 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.0.ebuild,
  -qbittorrent-3.0.0_rc5.ebuild:
  Version bump

*qbittorrent-3.0.0_rc5 (11 Jul 2012)

  11 Jul 2012; Markos Chandras <hwoarang@gentoo.org>
  +qbittorrent-3.0.0_rc5.ebuild, -qbittorrent-3.0.0_rc4.ebuild:
  Version bump

*qbittorrent-3.0.0_rc4 (09 Jul 2012)

  09 Jul 2012; Markos Chandras <hwoarang@gentoo.org>
  +qbittorrent-3.0.0_rc4.ebuild, -qbittorrent-3.0.0_rc3.ebuild:
  Version bump

  07 Jul 2012; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-3.0.0_rc2.ebuild:
  remove old

*qbittorrent-3.0.0_rc3 (07 Jul 2012)

  07 Jul 2012; Markos Chandras <hwoarang@gentoo.org>
  +qbittorrent-3.0.0_rc3.ebuild:
  Version bump

*qbittorrent-3.0.0_rc2 (02 Jul 2012)
*qbittorrent-2.9.11 (02 Jul 2012)

  02 Jul 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-2.9.11.ebuild,
  +qbittorrent-3.0.0_rc2.ebuild, -qbittorrent-2.9.10.ebuild,
  -qbittorrent-2.9.8.ebuild, -qbittorrent-2.9.9.ebuild,
  -qbittorrent-3.0.0_beta4.ebuild:
  Version bump. Remove old

*qbittorrent-3.0.0_beta4 (26 Jun 2012)
*qbittorrent-2.9.10 (26 Jun 2012)

  26 Jun 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-2.9.10.ebuild,
  +qbittorrent-3.0.0_beta4.ebuild, -qbittorrent-3.0.0_beta2.ebuild:
  Version bump

*qbittorrent-3.0.0_beta2 (23 May 2012)
*qbittorrent-2.9.9 (23 May 2012)

  23 May 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-2.9.9.ebuild,
  +qbittorrent-3.0.0_beta2.ebuild:
  Version bump

*qbittorrent-2.9.8 (05 May 2012)

  05 May 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-2.9.8.ebuild:
  version bump

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> qbittorrent-2.9.7.ebuild,
  qbittorrent-9999.ebuild: