@@ -4,26 +4,28 @@ Hash: SHA256
 DIST qbittorrent-2.9.11.tar.gz 3571306 SHA256 3d090ff576f19074dc8acbfe64cdec23c430183d6593b82bdaf2fb691e41c222 SHA512 603e4d6fadbd20da2015f5b6d4e219ca31b2aabd509903c0db6e75bb95f561d2860b3445369261760d847b936d1df7b1b35143edf957cadb08d852c44c88d14b WHIRLPOOL 8f7a1b52743fdd384eb9da4f6913e07763f2899c767e8197ddd843439beb2f774372f147104fe010ecaea0a12d400f54b127329696c113220948dfccc070d877
 DIST qbittorrent-2.9.7.tar.gz 3606781 SHA256 d706a8aff16cc6977379f5b25b842194dceef3b20efd0ca949300728c5a6a190 SHA512 bbc29781664432f7ebe42bb386c5cfd5c4eb5784f36620bf86a15a3e66f6cf3fe3a45831a4b552d5b48d5d1613591d208e6732e2a1a44ef269fd33fac9bf9cca WHIRLPOOL 5129c392345a371c18dc8a226e1c98ded5833019e1fd99a131f28e08ef310e3a4874930c8d2750742ff8f4cba0fdb5d9b926226e87b6911830ee67614ad361c1
 DIST qbittorrent-3.0.0.tar.gz 3625280 SHA256 6999ce802724f5620b14a237f4616305e8b3956d5058cbfd153684a8af3f47c6 SHA512 a81e23487ee797099666fd94fd084d3a0ef3f3d701fadb366d45a53ec4630f166bd3b49bea824b0ecd1150baf37488edc49c0394d5adc76333a12a794f201803 WHIRLPOOL df5733fd1b8ad38f8d6f249ef33f662e3e63787cce197ffbdb023fa589df0cac4fedb4979e40254111398d1bc5dc952fcc37e325fe4cd9eaa55cca40772e23ee
+DIST qbittorrent-3.0.1.tar.gz 3624955 SHA256 9b6f64ec3d48a83693c65be76bd67e6030cb5d13b081a7f539cdc8cf7ccc1be6 SHA512 5bf4f666dc2ce3951abe16f180a29ae3fcc1a454e13db38387f4d7a4bdbb4fdee00389ffde8bb01c5f9f129d84870263fcd4f2201e978e0cf4336d0b907afa44 WHIRLPOOL 92d147d3650bc04e43ed4de8550db73d3e43359a4543a1d8383b66582f6dbba19a1c19cef94838ae5dc5f54bc31c4c106fb6910d4226cef60a5e78ee8ef6f00a
 EBUILD qbittorrent-2.9.11.ebuild 1675 SHA256 888374b3f6fae200e9ca18528b0a8983cf20fe707fe9306d55ad9a0762515dea SHA512 f56f8e8aca5c4ae6b7d80783132fd6bb35fc0d04a2d8354fda9c23efa67d746b8cf04270330277639d49fa6fb87c77b9b7f44910ede7199e9d0647a6f749959f WHIRLPOOL d5387d078360ae354aad9d93246f8a2266b366afcae2f700c91d0f40198b712e478a7aed858a84278813e9512b3b8b8eb02c0d47489d1854a82875dd0caccdeb
 EBUILD qbittorrent-2.9.7.ebuild 1670 SHA256 48680b1650ee966f5a58d5f902a5a7f9d7ad49249520f1d1fbad264e30d92c72 SHA512 73c6ea1550a785cce62ee99595322928216e75850da4b1c5f09eb4645dbd40cd2dc8eacd48b0cc80c10f55769b70f4fffdf6af71a4dc8c0ef3775cde74fc441b WHIRLPOOL 039aba78a13c3d6ac3d5db462cd0a52ad9d221bb182ddbf416056af2052f4845e648f0e2f04e1a862bbfde57356d14acbc1cd5ebbada12f0efe729932adf11d0
 EBUILD qbittorrent-3.0.0.ebuild 1674 SHA256 50404f8ff2879ea91608e6f554fb280c87bdc67b371d4533f1d5c78c003de5e1 SHA512 137588d0858abf3cc0a5092b0f97b6b6bd47c2b28145a77ca966fa16a74dcbc9d4a3d84e5811435c6a3bba7e312d325c39ad705db1893d552556eed8687ada80 WHIRLPOOL 5db5b022a10fc4663c75c2faf710a94d4f57e38119657d35e8912393e68c29a7f7b4b94d3503eac35834afc5d198693ce58dc4b47c360fb944e4cd5a694a0764
+EBUILD qbittorrent-3.0.1.ebuild 1674 SHA256 525b306d1b5c95c719179b04e93daa02a1b8381e5939689bf934c5a15517bd1c SHA512 af472450f6365d57fcfdaf00b1a91ce7fc2b11a6a9eca63ae7d6cebcbe21e90c87c2d49a13fda83aa0351767667de9b3f7b961a0d07efb49109772b9ab0fd246 WHIRLPOOL 37428962cd4c0bcc8e039f17681bcfd4bc5deec8da04f3cf8abd9dfbcac3aa21f9c4564cebef8be2709ae6ac0e8329a9f8f3256ab32d2da311ab6ed2b7720a3d
 EBUILD qbittorrent-9999.ebuild 1672 SHA256 13345dfe0873f96060c7d19c9355951e01a67ff9bc4968794dd4ec9e837c5959 SHA512 f1f23ee3533d617db04fce61305ceb85685a70c9d1b186c1668ba011a6c990aec6d4e22a2bbe581a259fcd4be5069d8c32e3fac53c94a3a904247fa76a5f054b WHIRLPOOL 31dd78555c4bd8aed42fc850560e61c034265e373e6fadaa9138b6958553b788cc72bed265169480c0f44b637166f7d242791420f418eb5805dc0f0e8e7a7c83
-MISC ChangeLog 33495 SHA256 44cbd20633f85c71df22f0c9fcb673683d91c044d77f7b5a44845c4ba524c801 SHA512 b4950cf7ba13fa606aa81eb7634fff4fb54b592a93fc185db4a3140c7cacde1e65cbe9294bc9f12051ebabea6e45cc9054e973d1985ebdd385854ec649652fd4 WHIRLPOOL 15bacabef83577d57265488e34f9d99284b323bc3acb3095936a834b8b83bfc4fc70eb4391ab1ef64b2db26b08d00a61a90ab37429fc8365c805e96729cac732
+MISC ChangeLog 33625 SHA256 4f36370e83407c12e4ea8003a1ea35b12fff9570e8e515e3f67fcd7e062baf25 SHA512 23a415ae177a1ed6b3b47c1b1934beef047c343c4082b8880c4940c2a49c2a3aec3f2e3c9fa0a828ba89886f48fae081b97f139bb9af52a7e52f006c323ac135 WHIRLPOOL 00b0e5cfcc592f727e6e4e0ba5239c15bc65c31a0d2679fc33ebdf5f39c0ce16bb1b5e93f9266066f5e3ef65022263996db99c3e2ea1d7e3ff1fb22e727f5f6b
 MISC metadata.xml 280 SHA256 07e3116f2c52c06760e21dc1b8bd3b318b7d9a140fb1b8942736aedd0d750b73 SHA512 3ffeb1bb69c911cccb97337f89e1ea343aa97ee3aa15d5d2a908026a0ff8d57f5b402f8773f27cfad5cf1e2d0f1989ce7e27306caff4a2b3bd11bcfacb69223a WHIRLPOOL 54716ef0ad3b927a5206603681e982b1d376adae59a505cea0098e5e0b010e4a5f23f745ead4d616ea27e948f87d08dde777aa9aa1607a3b0298197c25c92c12
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQKAjKAAoJEPqDWhW0r/LCFfsP/AhGLmYcvBcr9k8aEZ8L/SUF
-vEUUooTboEDgLvuB0Y9tVBd5ivx1LKdwEXdqU7LStULVVPtkI4JTI08i8TugHQCb
-C5gUMjelTaqDDYwuZXa0xr6CWqAug5LNR/xs9Sld6RVb3Qim1UEOctl5WPCF89CR
-MaCNeLswJyNszyjLHqqVRg91PfRPxarPERUz1oiXgLi6n2z4yQL4SJrgn7ZQ0tsA
-JGTUkULjb82RAx/GWde1C8xyf7bMNvt+G5jrMVHesHVDxTE0hgJdpE++nxPjxe5c
-e7YJF5Q/19LpU5G9umYWHrd+iyJfwIxleDGEJOQCeMeKllW695kxJ+qzc7Co8mMP
-08nbcn4ZuTCJPgw26kM6Wp2FZW87xUaKFtO+IrQjuolU/T+s7HS0WJCUp6pRsfhw
-cpmFhQ6qiBJdzMuRybLx0PC05ErzSSD+1VWCVwrWbq0+1oULbNZ+tjXf+wMVKyvh
-xF/nqNUAX5z5Uf69f2DxxluPihm6mFxVWiTJBGPSEqq8iv6oh9dMOxWxRYEikY8m
-GlbFD2hJRmpwS/a7yqq5Y9AFSjZMrGQ384cejvU52/h2v0RGi282KppTBAiB7QBw
-08pZv921ZDXmcea0EKnqzkOx2W6GP/D+kccdIkd3xOXD1ObdjNCAsPoYpIflvcRJ
-RWnULW3Jc/uewekVwnz9
-=P/9m
+iQIcBAEBCAAGBQJQNQ8xAAoJEPqDWhW0r/LCzasP/j7V+bt3KdAX3G3WR9aK4ZQQ
+3s90OGzb+mwgAGN730iv8jboeN1nQnN+GDQS0g3OKVyyIgGFNL2mcb/kU8JuisKN
+WY92UawCL2FAyItW6bzqT8gvE2D9NhYBnDROBlb0Es2+jjPH/C6XTCn8aN+Ppy/Z
+qRHe+BghzCLKW/AZI8gOtU5JBgFM/5iiFFCJnbLA277N97mpXXTjY0kG2AYV/bHW
+RmIi1p9QsKAwPHCyNsbKyds3KEjDTDdbxxqLqJnYyUGOjVzxaUHXTL3pMk5DX4B1
+B0gZig9fNPH4jH4kPNALna14LPEAyy5H+app6ReqG6Hfn6eDQGfO38gFBp9k0HUD
+qB/8nntsyoTnUvW/ixs5Q/2/MLG8IKf6Li7HNHFxIEeNJSM3WQBz4V4/KyvDsgpy
+gFrz9c8ILaFiAaL+gWXpVJMIV74U8zyID9/70+A+e27sNn27aARXHsgEAvKUHg5F
+zl5QSXhXlcRFsP9MgRq1nRTpAUj8teNhPqN505o0VO/Wg0uUTCoZDEaHDmx7MCue
+pVS0c1+F/PGfRTOx3MSKzI4gLTaAPMa+ab7v58cYdjvK4/N6zte8eQ0CzAYsTDNs
+w4b267Qd2ffylNAxrfgRFNu3VQTeNK4ZD3X2UwM6VXw/S/S9U5S6hDgLCt3BHrt5
+uoEloTju4ME9zYkvC0XQ
+=+oMs
 -----END PGP SIGNATURE-----
