@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/qbittorrent
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.195 2012/08/12 19:49:28 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.196 2012/08/22 16:56:13 hwoarang Exp $
+
+*qbittorrent-3.0.1 (22 Aug 2012)
+
+  22 Aug 2012; Markos Chandras <hwoarang@gentoo.org> +qbittorrent-3.0.1.ebuild:
+  Version bump
 
 *qbittorrent-3.0.0 (12 Aug 2012)
 
